--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -1,10 +1,10 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "description": "Frontend",
+  "description": "Starter app ",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --host 0.0.0.0 --port 9090 --hot --inline --config webpack.config.js"
+    "start": "webpack-dev-server --hot --inline "
   },
   "repository": {
     "type": "git",
