--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -4,7 +4,9 @@
   "description": "Starter app ",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline "
+    "build": "webpack",
+    "start": "webpack-dev-server --hot --inline ",
+    "eslint": "eslint app"
   },
   "repository": {
     "type": "git",
@@ -17,10 +19,14 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "css-loader": "^0.23.1",
+    "eslint": "^2.6.0",
+    "eslint-config-airbnb": "^6.2.0",
+    "eslint-plugin-react": "^4.2.3",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.8.1"
+    "webpack-hot-middleware": "^2.8.1",
+    "webpack-merge": "^0.8.4"
   },
   "dependencies": {
     "axios": "^0.9.1",
@@ -31,8 +37,10 @@
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
+    "react-router-bootstrap": "^0.23.0",
+    "react-router-redux": "^4.0.4",
     "redux": "^3.3.1",
-    "redux-promise": "^0.5.1",
-    "redux-simple-router": "^2.0.4"
+    "redux-simple-router": "^2.0.4",
+    "redux-thunk": "^2.0.1"
   }
 }
